client/src/index.css
@import url("https://fonts.googleapis.com/css2?family=DotGothic16&family=Scope+One&family=Trirong:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

:root {
  --red-color: #780116;
  --purple-dark-color: #4f4789;
  --purple-medium-color: #a1869e;
  --purple-light-color: #bdb5f8;
  --yellow-color: #e3d985;
}
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

#root {
  background-image: url(./assets/images/Noise.svg);
  background-size: 1080px;
  width: 100vw;
  min-height: 100vh;
  overflow-x: hidden;
}

main {
  margin-top: 10rem;
}

section {
  padding: 0 2rem;
}

h2 {
  font-family: "Trirong", serif;
  font-size: 2rem;
  line-height: 125%;
  font-weight: 200;
}

p {
  font-family: "Scope One", serif;
  padding: 1rem 0;
}

a:hover {
  cursor: pointer;
}

@media screen and (min-width: 768px) {
  h2 {
    font-size: 4rem;
  }
}

